[project]
name = "code-debug-env"
version = "1.0.0"
description = "RL environment where an agent fixes broken Python code to pass test cases"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.30.0",
]

[project.scripts]
server = "server.app:main"
